--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "starter",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "browserslist": [
-    "> 0.25%, not dead"
-  ],
+  "browserslist": "> 0.25%, not dead",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
@@ -24,6 +21,7 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
-    "color-convert": "^2.0.1"
+    "color-convert": "^2.0.1",
+    "notyf": "^3.10.0"
   }
 }
